project_1/css/index.css
:root {
  --gold: #f3bb00;
  --gray-dark: #131313;
  --gray-lighter: #1d1d1d;
  --gray-light: #292929;
}

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: "Lato", sans-serif;
  overflow-x: hidden !important;
  color: white;
}

header {
  top: 0;
  z-index: 100;
}

.header_container {
  width: 100vw;
  min-height: 20vh;
  background-color: var(--gray-dark);
  display: flex;
  color: white;
  padding: 0 20px;
  justify-content: space-between;
  align-items: center;
}

.main_nav {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  overflow-x: hidden;
}

.header_logo {
  padding-right: 20px;
}

.header_logo img {
  width: 120px;
}

.header_nav_item {
  display: block;
  padding: 0 15px;
  text-transform: uppercase;
  transition: 200ms hover ease-in;
  cursor: pointer;
}

.selected {
  color: var(--gold);
}

.header_nav {
  display: none;
}

.header_nav_mobile {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.header_nav_item:hover {
  color: var(--gold);
}

.header_nav_burger > i {
  font-size: 2rem;
}

.header_menu_bg {
  padding: 20px;
  position: absolute;
  right: 0;
  top: 0;
  height: 100vh !important;
  z-index: 5;
  width: 70vw;
  background-color: var(--gray-lighter);
  transform: translateX(100%);
  transition: 200ms transform ease-in-out;
  overflow: hidden;
}

.header_menu_bg[data-active="true"] {
  transform: translateX(0);
}

.header_menu_bg[data-active="false"] {
  transform: translateX(100%);
}

.header_menu_bg_exit_btn {
  width: 100%;
  text-align: end;
}

.header_menu_bg_exit_btn > i {
  font-size: 2rem;
}

.header_contact {
  display: none;
  flex-direction: column;
  gap: 10px;
}

.header_contact_mobile {
  position: absolute;
  bottom: 0;
  transform: translateY(-100%);
  display: flex;
  flex-direction: column;
}

.header_contact_mobile i,
.header_contact i {
  color: var(--gold);
  padding-right: 8px;
}

.hero_container {
  overflow: hidden;
  width: 100vw;
  height: 80vh;
  position: relative;
}

.hero_background {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  background-color: var(--gray-dark);
  opacity: 0.7;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero_text {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  color: white;
  font-size: 1.5rem;
  width: 75vw;
  text-align: center;
  z-index: 3;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  font-weight: 300;
}

.carousel {
  position: relative;
  width: 100%;
  height: 100%;
}

.carousel > ul {
  margin: 0;
  padding: 0;
}

.slide {
  position: absolute;
  inset: 0;
  opacity: 0;
  transition: 700ms opacity ease-in-out;
  transition-delay: 700ms;
}

.slide > img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.active_slide {
  opacity: 1;
  z-index: 1;
  transition-delay: 0ms;
}

/* footer styles */

footer {
  background-color: var(--gray-dark);
  border-top: 2px solid var(--gold);
}

.footer_container {
  padding: 40px;
  display: flex;
  width: 100vw;
  padding: 10 40px;
  flex-direction: column;
}

.footer_container > div {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.footer_logo {
  align-self: center;
  flex: 1;
  width: 100%;
  order: 0;
}

.footer_subcontainer:nth-child(1) {
  order: 2;
}

.footer_subcontainer:nth-child(2) {
  order: 3;
}

.footer_subcontainer {
  gap: 40px;
  flex: 1;
}

.footer_subcontainer ul {
  list-style: none;
}

.footer_subcontainer ul > li {
  padding-top: 6px;
}

.footer_subcontainer ul > li > i {
  list-style: none;
  padding-right: 5px;
  color: var(--gold);
}

.footer_section_title {
  font-size: 1.35rem;
  display: block;
  padding-bottom: 10px;
}

.footer_quote {
  display: block;
  width: 30%;
}

/* features section styles */

.features_container {
  background-color: var(--gray-lighter);
  display: grid;
  grid-template-rows: repeat(3, auto);
  grid-template-columns: 1fr;
  min-height: 50vh;
  gap: 15px;
  padding: 20px 20px;
}

.beers_title,
.features_title {
  border-bottom: 4px solid var(--gold);
  padding-bottom: 10px;
  margin-bottom: 20px;
}

.features_ft {
  display: flex;
  align-items: center;
  gap: 20px;
  background-color: var(--gray-light);
  padding: 20px;
  border-radius: 10px;
}

.features_ft_text {
  flex: 5;
}

.features_ft_img {
  flex: 1;
}

.features_ft_img img {
  width: 100%;
}

.features_ft_title {
  margin-bottom: 15px;
}

.beers_title > h2,
.features_title > h2 {
  font-size: 2.2rem;
}

.features_ft_desc {
  text-align: justify;
}

.beers_container {
  width: 100vw;
  min-height: 25vh;
  background-color: var(--gray-light);
  padding: 20px 20px;
}

.beers_imgs {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(4, 1fr);
  gap: 10px;
}

.beer_card {
  flex: 1;
  flex-shrink: 0;
  background-color: var(--gray-lighter);
  border-radius: 10px;
}

.beer_card_details {
  padding: 20px 20px;
}

.beer_card_details > ul{
  list-style-type: none;
}

.beer_card_details > h3 {
  font-size: 1.5rem; 
  margin-bottom: 10px;
  padding-bottom: 5px;
  border-bottom: 2px solid var(--gold)
}

.beer_card_details > ul > li {
  padding: 3px 0;
  display: flex;
  justify-content: space-between;
}

.beer_card_details > ul > li > .left > i {
  color: var(--gold);
  font-size: 1.2rem;
  margin-right: 5px;
}

.beer_card_details > ul > li > .left {
  font-weight: 300;
  text-transform: uppercase;
}

.beer_card_img > img {
  width: 100%;
  border-radius: 10px;
}


@media only screen and (min-width: 1025px) {
  .beers_imgs {
    grid-template-columns: repeat(4, 1fr) !important;
    grid-template-rows: 1fr !important;
  }
}

@media only screen and (min-width: 768px) {
  .main_nav {
    display: flex;
    justify-content: start;
  }

  .header_nav_burger {
    display: none;
  }

  .header_nav {
    display: flex;
    align-items: center;
  }

  .header_contact {
    display: flex;
  }

  .header_container {
    border-bottom: 2px var(--gold) solid;
  }

  .hero_text {
    font-size: 2rem;
  }

  .footer_container {
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
  }

  .footer_logo {
    order: 2;
  }

  .footer_subcontainer:nth-child(1) {
    order: 1;
  }

  .footer_subcontainer:nth-child(1) {
    order: 3;
  }

  .footer_container > div {
    text-align: left;
  }

  .features_container {
    grid-template-columns: 1fr 1fr;
    padding: 60px 120px;
  }

  .features_title {
    grid-column: span 2;
  }

  .features_ft_text {
    flex: 4;
  }

  .features_ft_img {
    flex: 1;
  }

  .beers_container {
    padding: 60px 120px;
  }

  .beers_imgs {
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 1fr 1fr;
  }
}

@media only screen and (max-width: 767.99px) {
  .footer_section_title {
    border-bottom: 2px solid var(--gold);
    display: block;
    margin-bottom: 5px;
  }

  .footer_subcontainer > div {
    width: 50%;
  }

  .footer_container {
    gap: 25px;
  }
}

